--- a/public/index.html
+++ b/public/index.html
@@ -5,17 +5,17 @@
     <title>Document</title>
     <link rel='stylesheet' href='styles.css' >
 </head>
-<body>
+<body class='text-gray-600'>
     <div><!-- content wrapper -->
 <div>
     <nav>
         <div>
-            <h1>
+            <h1 class="font-bold uppercase p-4 border-b border-gray-100" > 
                 <a href="/">Food Ninja</a>
             </h1>
         </div>
         <ul>
-            <li>
+            <li class="text-gray-700 font-bold">
                 <a href="#">
                     <span>Home</span>
                 </a>
@@ -33,20 +33,20 @@
         </ul>
     </nav>
 </div> <!-- end nav-->
-<main>
+<main class="px-16 py-6">
     <div>
         <a href='#'>Login</a>
         <a href='#'>Sign up</a>
     </div>
     <header>
-        <h2>Recipies</h2>
-        <h3>For Ninjas</h3>
+        <h2 class='text-gray-700 text-6xl font-semibold'>Recipies</h2>
+        <h3 class="text-2xl font-semibold">For Ninjas</h3>
     </header>
 
     <div>
-        <h4>Latest Recipies</h4>
+        <h4 class="font-bold mt-12 pb-2 border-b border-gray-200">Latest Recipies</h4>
 
-        <div>
+        <div class="mt-8">
             <!-- cards go here-->
             <div>
                 <img src="img/stew.jpg" alt "stew" />
@@ -60,9 +60,9 @@
         </div>
 
 
-        <h4>Most Popular</h4>
+        <h4 class="font-bold mt-12 pb-2 border-b border-gray-200">Most Popular</h4>
 
-        <div>
+        <div class="mt-8">
             <!-- cards go here -->
         </div>
 
