--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <title>Document</title>
     <link rel='stylesheet' href='styles.css' >
 </head>
-<body class='text-gray-600'>
+<body class='text-gray-600 font-body' >
     <div><!-- content wrapper -->
 <div>
     <nav>
@@ -34,9 +34,9 @@
     </nav>
 </div> <!-- end nav-->
 <main class="px-16 py-6">
-    <div>
-        <a href='#'>Login</a>
-        <a href='#'>Sign up</a>
+    <div class="flex justify-end">
+        <a href='#' class="text-primary">Log in</a>
+        <a href='#' class="text-primary ml-2">Sign up</a>
     </div>
     <header>
         <h2 class='text-gray-700 text-6xl font-semibold'>Recipies</h2>
@@ -66,8 +66,8 @@
             <!-- cards go here -->
         </div>
 
-    <div>
-        <div>Load More</div>
+    <div class="flex justify-center"> 
+        <div class="bg-secondary-100 text-secondary-200">Load More</div>
     </div>
 
     </div>
