--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <title>Document</title>
     <link rel='stylesheet' href='styles.css' >
 </head>
-<body class='text-gray-600 font-body' >
+<body class='text-gray-600 font-body bg-gray-100' >
     <div><!-- content wrapper -->
 <div>
     <nav>
@@ -34,7 +34,7 @@
     </nav>
 </div> <!-- end nav-->
 <main class="px-16 py-6">
-    <div class="flex justify-end">
+    <div class="flex justify-center md:justify-end ">
         <a href='#' class="text-primary">Log in</a>
         <a href='#' class="text-primary ml-2">Sign up</a>
     </div>
@@ -48,13 +48,13 @@
 
         <div class="mt-8">
             <!-- cards go here-->
-            <div>
-                <img src="img/stew.jpg" alt "stew" />
-                <div>
-                    <span>
+            <div class="bg-white rounded overflow-hidden shadow-md">
+                <img src="img/stew.jpg" alt "stew" class='w-full h-32 sm:h-48 object-cover'/>
+                <div class='m-4'>
+                    <span class="font-bold">
                         5 Bean Chilli Stew
                     </span>
-                    <span>Recipe by Mario</span>
+                    <span class="block text-gray-500 text-sm">Recipe by Mario</span>
                 </div>
             </div>
         </div>
