--- a/public/index.html
+++ b/public/index.html
@@ -6,8 +6,8 @@
     <link rel='stylesheet' href='styles.css' >
 </head>
 <body class='text-gray-600 font-body bg-gray-100' >
-    <div><!-- content wrapper -->
-<div>
+    <div class='grid md:grid-cols-3'><!-- content wrapper -->
+<div class='md:col-span-1'>
     <nav>
         <div>
             <h1 class="font-bold uppercase p-4 border-b border-gray-100" > 
@@ -33,7 +33,7 @@
         </ul>
     </nav>
 </div> <!-- end nav-->
-<main class="px-16 py-6">
+<main class="px-16 py-6 md:col-span-2">
     <div class="flex justify-center md:justify-end ">
         <a href='#' class="text-primary">Log in</a>
         <a href='#' class="text-primary ml-2">Sign up</a>
@@ -46,7 +46,7 @@
     <div>
         <h4 class="font-bold mt-12 pb-2 border-b border-gray-200">Latest Recipies</h4>
 
-        <div class="mt-8">
+        <div class="mt-8 grid md:grid-cols-3 gap-10">
             <!-- cards go here-->
             <div class="card">
                 <img src="img/stew.jpg" alt "stew" class='w-full h-32 sm:h-48 object-cover'/>
