--- a/public/index.html
+++ b/public/index.html
@@ -35,8 +35,8 @@
 </div> <!-- end nav-->
 <main class="px-16 py-6 md:col-span-2">
     <div class="flex justify-center md:justify-end ">
-        <a href='#' class="text-primary">Log in</a>
-        <a href='#' class="text-primary ml-2">Sign up</a>
+        <a href='#' class="btn text-primary border-primary md:border-2">Log in</a>
+        <a href='#' class="btn text-primary ml-2 border-primary md:border-2">Sign up</a>
     </div>
     <header>
         <h2 class='text-gray-700 text-6xl font-semibold'>Recipies</h2>
@@ -94,7 +94,7 @@
         </div>
 
     <div class="flex justify-center"> 
-        <div class="bg-secondary-100 text-secondary-200">Load More</div>
+        <div class="bg-secondary-100 text-secondary-200 btn">Load More</div>
     </div>
 
     </div>
