--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     <nav>
         <div>
             <h1 class="font-bold uppercase p-4 border-b border-gray-100" > 
-                <a href="/">Food Ninja</a>
+                <a href="/" class="hover:text-gray-700">Food Ninja</a>
             </h1>
         </div>
         <ul>
@@ -44,8 +44,8 @@
 </div> <!-- end nav-->
 <main class="px-16 py-6 md:col-span-2">
     <div class="flex justify-center md:justify-end ">
-        <a href='#' class="btn text-primary border-primary md:border-2">Log in</a>
-        <a href='#' class="btn text-primary ml-2 border-primary md:border-2">Sign up</a>
+        <a href='#' class="btn text-primary border-primary md:border-2 hover:bg-primary hover:text-white">Log in</a>
+        <a href='#' class="btn text-primary ml-2 border-primary md:border-2 hover:bg-primary hover:text-white hover:shadow-lg">Sign up</a>
     </div>
     <header>
         <h2 class='text-gray-700 text-6xl font-semibold'>Recipies</h2>
@@ -57,7 +57,7 @@
 
         <div class="mt-8 grid md:grid-cols-3 gap-10">
             <!-- cards go here-->
-            <div class="card">
+            <div class="card hover:shadow-lg">
                 <img src="img/stew.jpg" alt "stew" class='w-full h-32 sm:h-48 object-cover'/>
                 <div class='m-4'>
                     <span class="font-bold">
@@ -72,7 +72,7 @@
                     <span>30 mins</span>
                 </div>
             </div>
-            <div class="card">
+            <div class="card hover:shadow-lg">
                 <img src="img/noodles.jpg" alt "noodles" class='w-full h-32 sm:h-48 object-cover'/>
                 <div class='m-4'>
                     <span class="font-bold">
@@ -87,7 +87,7 @@
                     <span>25 mins</span>
                 </div>
             </div>
-            <div class="card">
+            <div class="card hover:shadow-lg">
                 <img src="img/curry.jpg" alt "curry" class='w-full h-32 sm:h-48 object-cover'/>
                 <div class='m-4'>
                     <span class="font-bold">
@@ -112,7 +112,7 @@
         </div>
 
     <div class="flex justify-center"> 
-        <div class="bg-secondary-100 text-secondary-200 btn">Load More</div>
+        <div class="bg-secondary-100 text-secondary-200 btn hover:shadow-inner">Load More</div>
     </div>
 
     </div>
