--- a/public/index.html
+++ b/public/index.html
@@ -50,8 +50,8 @@
 </div> <!-- end nav-->
 <main class="px-16 py-6 md:col-span-2  bg-gray-100">
     <div class="flex justify-center md:justify-end ">
-        <a href='#' class="btn text-primary border-primary md:border-2 hover:bg-primary hover:text-white">Log in</a>
-        <a href='#' class="btn text-primary ml-2 border-primary md:border-2 hover:bg-primary hover:text-white hover:shadow-lg">Sign up</a>
+        <a href='#' class="btn text-primary border-primary md:border-2 hover:bg-primary hover:text-white transition ease-out duration-500">Log in</a>
+        <a href='#' class="btn text-primary ml-2 border-primary md:border-2 hover:bg-primary hover:text-white hover:shadow-lg transition ease-out duration-500">Sign up</a>
     </div>
     <header>
         <h2 class='text-gray-700 text-6xl font-semibold'>Recipies</h2>
@@ -118,7 +118,7 @@
         </div>
 
     <div class="flex justify-center"> 
-        <div class="bg-secondary-100 text-secondary-200 btn hover:shadow-inner">Load More</div>
+        <div class="bg-secondary-100 text-secondary-200 btn hover:shadow-inner transform hover:scale-125 hover:bg-opacity-50 transition ease-out duration-300">Load More</div>
     </div>
 
     </div>
